@@ -21,8 +21,8 @@
 				method: 'PUT',
 				headers: parameters.headers,
 				url: CMDBuild.core.proxy.Index.session.rest
-					+ '/' + parameters.urlParams[CMDBuild.core.constants.Proxy.TOKEN]
-					+ '/impersonate/' + parameters.urlParams[CMDBuild.core.constants.Proxy.USERNAME],
+					+ '/' + parameters.restUrlParams[CMDBuild.core.constants.Proxy.TOKEN]
+					+ '/impersonate/' + parameters.restUrlParams[CMDBuild.core.constants.Proxy.USERNAME],
 				loadMask: Ext.isBoolean(parameters.loadMask) ? parameters.loadMask : true,
 				scope: parameters.scope || this,
 				success: parameters.success || Ext.emptyFn,
@@ -57,7 +57,7 @@
 			CMDBuild.core.interfaces.Rest.request({
 				method: 'DELETE',
 				headers: parameters.headers,
-				url: CMDBuild.core.proxy.Index.session.rest + '/' + parameters.urlParams[CMDBuild.core.constants.Proxy.TOKEN] + '/',
+				url: CMDBuild.core.proxy.Index.session.rest + '/' + parameters.restUrlParams[CMDBuild.core.constants.Proxy.TOKEN] + '/',
 				loadMask: Ext.isBoolean(parameters.loadMask) ? parameters.loadMask : true,
 				scope: parameters.scope || this,
 				success: parameters.success || Ext.emptyFn,
@@ -77,7 +77,7 @@
 				method: 'GET',
 				headers: parameters.headers,
 				jsonData: parameters.params,
-				url: CMDBuild.core.proxy.Index.session.rest + '/' + parameters.urlParams[CMDBuild.core.constants.Proxy.TOKEN] + '/',
+				url: CMDBuild.core.proxy.Index.session.rest + '/' + parameters.restUrlParams[CMDBuild.core.constants.Proxy.TOKEN] + '/',
 				disableAllMessages: true,
 				loadMask: Ext.isBoolean(parameters.loadMask) ? parameters.loadMask : true,
 				scope: parameters.scope || this,
@@ -98,7 +98,7 @@
 				method: 'PUT',
 				headers: parameters.headers,
 				jsonData: parameters.params,
-				url: CMDBuild.core.proxy.Index.session.rest + '/' + parameters.urlParams[CMDBuild.core.constants.Proxy.TOKEN] + '/',
+				url: CMDBuild.core.proxy.Index.session.rest + '/' + parameters.restUrlParams[CMDBuild.core.constants.Proxy.TOKEN] + '/',
 				loadMask: Ext.isBoolean(parameters.loadMask) ? parameters.loadMask : true,
 				scope: parameters.scope || this,
 				success: parameters.success || Ext.emptyFn,
